<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardviewinfo"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="12dp"
    app:cardCornerRadius="12dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_time"
                android:textSize="24dp">


            </TextView>
            <TextView
                android:id="@+id/InfoTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp"
                android:textSize="24dp">


            </TextView>




        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="24dp">


            </TextView>
            <TextView
                android:id="@+id/InfoLongi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="24dp">


            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="24dp">


            </TextView>
            <TextView
                android:id="@+id/InfoLati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="24dp">


            </TextView>




        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comment:"
                android:textSize="24dp">


            </TextView>
            <TextView
                android:id="@+id/InfoComments"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:text="@string/comments"
                android:textSize="24dp">


            </TextView>




        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/InfoimageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                ></ImageView>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>