<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserPage">

    <Button
        android:id="@+id/report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="go1"
        android:text="@string/report"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/natdis"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/opengal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_picture"
        app:layout_constraintBottom_toTopOf="@+id/comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGallery"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageGallery"
        android:layout_width="200dp"
        android:layout_height="245dp"
        app:layout_constraintBottom_toTopOf="@+id/opengal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeMyLang"
        app:layout_constraintVertical_bias="0.5"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comments"
        android:inputType="textMultiLine"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/natdis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opengal"
        app:layout_constraintVertical_bias="0.5" />

    <Spinner
        android:id="@+id/natdis"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:scrollbarSize="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/changeMyLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        app:layout_constraintEnd_toStartOf="@+id/logoutmain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/changeMyLang"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


