<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardviewid"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="12dp"
    app:cardCornerRadius="12dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event"
                android:textSize="24dp">


            </TextView>
            <TextView
                android:id="@+id/textspinvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="spinvalue"
                android:textSize="24dp">


            </TextView>


</LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="24dp">


            </TextView>
            <TextView
                android:id="@+id/textlongi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="24dp">


            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="24dp">


            </TextView>
            <TextView
                android:id="@+id/textlati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="24dp">


            </TextView>




        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Priority:"
                android:textSize="24dp">


            </TextView>
            <TextView
                android:id="@+id/textusercomm"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:text="@string/comments"
                android:textSize="24dp">


            </TextView>




        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/buttonnotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notify"
                ></Button>
            <Button
                android:id="@+id/buttonDeny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Deny"

                ></Button>
            <Button
                android:id="@+id/buttoninfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Info"

                ></Button>
        </LinearLayout>
    </LinearLayout>



</androidx.cardview.widget.CardView>
